--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">magic8ball</string>
     <string name="shake_txt" >Shake to get an answer</string>
+    <string name="ball">Ball</string>
 
     <string-array name="values">
         <item>It is certain.</item>
@@ -18,7 +19,7 @@
         <item>Better not tell you now.</item>
         <item>Cannot predict now.</item>
         <item>Concentrate and ask again.</item>
-        <item>Don't count on it.</item>
+        <item>Don\'t count on it.</item>
         <item>My reply is no.</item>
         <item>My sources say no.</item>
         <item>Outlook not so good.</item>
